增加動畫特效

--- a/pages/index.html
+++ b/pages/index.html
@@ -13,6 +13,7 @@
     rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     <main>
       <section class="banner">
         <div class="container">
-          <div class="text">
+          <div class="text" data-aos="fade-up">
             <p class="description text-xl text-red">Promise-Desert 2020 早春系列</p>
             <h2 class="heading text-3xl text-red font-bold">看得清，才能看得遠</h2>
             <a href="#" class="btn">立即購買</a>
@@ -30,7 +31,7 @@
 
       <section class="introduction section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-red text-center">用專業的心，做專業的事</h2>
+          <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in">用專業的心，做專業的事</h2>
           <ul class="cards flex flex-wrap">
             <li class="card">
               <div class="icon">
@@ -66,21 +67,21 @@
       </section>
 
       <section class="classic-series container section-spacing">
-        <h2 class="heading font-bold text-2xl text-red text-center">經典系列鏡框</h2>
+        <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in">經典系列鏡框</h2>
         <div class="cards flex flex-wrap">
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
               alt="OPTICAL">
             <h3 class="title font-bold text-2xl text-lighter-red text-center">OPTICAL</h3>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img class=""
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
               alt="SUNGLASSES">
             <h3 class="title font-bold text-2xl text-lighter-red text-center">SUNGLASSES</h3>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img class=""
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
               alt="FUNCTIONAL">
@@ -91,9 +92,9 @@
 
       <section class="co-branding section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-white text-center">聯名設計鏡框</h2>
+          <h2 class="heading font-bold text-2xl text-white text-center" data-aos="zoom-in">聯名設計鏡框</h2>
           <ul class="cards flex flex-wrap">
-            <li class="card">
+            <li class="card" data-aos="fade-right">
               <picture>
                 <source
                   srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true.png"
@@ -104,7 +105,7 @@
               </picture>
               <h3 class="title font-bold text-2xl text-lighter-red text-center">DOUBLE A+</h3>
             </li>
-            <li class="card">
+            <li class="card" data-aos="fade-left">
               <picture>
                 <source
                   srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true.png"
@@ -120,9 +121,9 @@
       </section>
 
       <section class="recommend container section-spacing">
-        <h2 class="heading font-bold text-2xl text-red text-center">顧客推薦</h2>
+        <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in" data-aos-offset="500">顧客推薦</h2>
         <ul class="cards flex flex-wrap">
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
               alt="Jessy">
@@ -132,7 +133,7 @@
               <span class="date">2021/06/20</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
               alt="凱倫">
@@ -142,7 +143,7 @@
               <span class="date">2021/04/18</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
               alt="悠悠">
@@ -152,7 +153,7 @@
               <span class="date">2020/12/25</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
               alt="Kyuan">
@@ -167,9 +168,9 @@
 
       <div class="contact section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-red text-center">顧客推薦</h2>
+          <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in" data-aos-offset="500">顧客推薦</h2>
           <p class="description text-md">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-          <form action="">
+          <form action="" data-aos="fade-right">
             <div class="input-field">
               <label for="name">姓名</label>
               <input class="form-input w-100 text-base" type="text" id="name" placeholder="陳小明">
@@ -200,6 +201,7 @@
 
     <%- include('./layout/footer'); -%>
 
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       <script type="module" src="../main.js"></script>
 </body>
 
