--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     rel="stylesheet">
   <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <script type="module" crossorigin src="/hexschoolcsslessonp2/assets/main-aeb0bf8b.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+  <script type="module" crossorigin src="/hexschoolcsslessonp2/assets/main-e5f07201.js"></script>
   <link rel="stylesheet" href="/hexschoolcsslessonp2/assets/main-ae70d374.css">
 </head>
 
@@ -35,7 +36,7 @@
 </header>    <main>
       <section class="banner">
         <div class="container">
-          <div class="text">
+          <div class="text" data-aos="fade-up">
             <p class="description text-xl text-red">Promise-Desert 2020 早春系列</p>
             <h2 class="heading text-3xl text-red font-bold">看得清，才能看得遠</h2>
             <a href="#" class="btn">立即購買</a>
@@ -45,7 +46,7 @@
 
       <section class="introduction section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-red text-center">用專業的心，做專業的事</h2>
+          <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in">用專業的心，做專業的事</h2>
           <ul class="cards flex flex-wrap">
             <li class="card">
               <div class="icon">
@@ -81,21 +82,21 @@
       </section>
 
       <section class="classic-series container section-spacing">
-        <h2 class="heading font-bold text-2xl text-red text-center">經典系列鏡框</h2>
+        <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in">經典系列鏡框</h2>
         <div class="cards flex flex-wrap">
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-1.png?raw=true"
               alt="OPTICAL">
             <h3 class="title font-bold text-2xl text-lighter-red text-center">OPTICAL</h3>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img class=""
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-2.png?raw=true"
               alt="SUNGLASSES">
             <h3 class="title font-bold text-2xl text-lighter-red text-center">SUNGLASSES</h3>
           </div>
-          <div class="card">
+          <div class="card" data-aos="flip-left">
             <img class=""
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section3-3.png?raw=true"
               alt="FUNCTIONAL">
@@ -106,9 +107,9 @@
 
       <section class="co-branding section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-white text-center">聯名設計鏡框</h2>
+          <h2 class="heading font-bold text-2xl text-white text-center" data-aos="zoom-in">聯名設計鏡框</h2>
           <ul class="cards flex flex-wrap">
-            <li class="card">
+            <li class="card" data-aos="fade-right">
               <picture>
                 <source
                   srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-1.png?raw=true.png"
@@ -119,7 +120,7 @@
               </picture>
               <h3 class="title font-bold text-2xl text-lighter-red text-center">DOUBLE A+</h3>
             </li>
-            <li class="card">
+            <li class="card" data-aos="fade-left">
               <picture>
                 <source
                   srcset="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section4-2.png?raw=true.png"
@@ -135,9 +136,9 @@
       </section>
 
       <section class="recommend container section-spacing">
-        <h2 class="heading font-bold text-2xl text-red text-center">顧客推薦</h2>
+        <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in" data-aos-offset="500">顧客推薦</h2>
         <ul class="cards flex flex-wrap">
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-1.png?raw=true"
               alt="Jessy">
@@ -147,7 +148,7 @@
               <span class="date">2021/06/20</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-2.png?raw=true"
               alt="凱倫">
@@ -157,7 +158,7 @@
               <span class="date">2021/04/18</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-3.png?raw=true"
               alt="悠悠">
@@ -167,7 +168,7 @@
               <span class="date">2020/12/25</span>
             </div>
           </li>
-          <li class="card">
+          <li class="card" data-aos="zoom-out-down" data-aos-offset="500">
             <img
               src="https://github.com/hexschool/2022-web-layout-training/blob/main/week3-4/home-section5-4.png?raw=true"
               alt="Kyuan">
@@ -182,9 +183,9 @@
 
       <div class="contact section-spacing">
         <div class="container">
-          <h2 class="heading font-bold text-2xl text-red text-center">顧客推薦</h2>
+          <h2 class="heading font-bold text-2xl text-red text-center" data-aos="zoom-in" data-aos-offset="500">顧客推薦</h2>
           <p class="description text-md">我們相當重視您的意見，若您有任何疑問，可先參考「常見問題」，若仍有任何問題，請填妥以下資料，我們會在近期與您聯繫。</p>
-          <form action="">
+          <form action="" data-aos="fade-right">
             <div class="input-field">
               <label for="name">姓名</label>
               <input class="form-input w-100 text-base" type="text" id="name" placeholder="陳小明">
@@ -280,6 +281,7 @@
 
   </div>
 </footer>
+      <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
       
 </body>
 
